--- a/training-project/pom.xml
+++ b/training-project/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>training-project</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>java-sourcecode</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
